# hello-embedding

./: .gitignore  pyproject.toml  research_embedding.py
